Demo string compaction